# rust-htmx

./: .env.docker  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml
assets/: download.sh  store.json
assets/web/: package-lock.json  package.json  sortable.js
migrations/2024-03-29-135731_initial_setup/: down.sql  up.sql
src/: lib.rs  models.rs  schema.rs  todos.rs
styles/: sortable.css
templates/: index.html  layout.html  list.html
