[package]
name = "rusthtmx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.5"
tera = "1.19.1"
lazy_static = "1.4.0"
diesel = { version = "2.1.5", features = ["postgres"]}
dotenvy = "0.15.7"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
